--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
@@ -9,15 +9,15 @@
 <div class="l-mainstage">
     <div class="l-mainstage__wrap">
         <div class="l-mainstage__title">
-            <h1 class="t-title">@Html.Sitecore().Field(AwardFundModel.Template.AwardFund.Fields.MainTitle.ToString(), modelitem)</h1>
+            <h1 class="t-title">@Html.Sitecore().Field(Template.AwardFund.Fields.MainTitle.ToString(), modelitem)</h1>
         </div>
         <div class="l-mainstage__content">
             <div class="l-flex u-flex-col u-flex-gap-sm">
                 <div class="l-flex__item">
-                    @Html.Sitecore().Field(AwardFundModel.Template.AwardFund.Fields.SubTitle.ToString(), modelitem)
+                    @Html.Sitecore().Field(Template.AwardFund.Fields.SubTitle.ToString(), modelitem)
                 </div>
                 <div class="l-flex__item">
-                    <span class="t-note">@Html.Sitecore().Field(AwardFundModel.Template.AwardFund.Fields.Content.ToString(), modelitem)</span>
+                    <span class="t-note">@Html.Sitecore().Field(Template.AwardFund.Fields.Content.ToString(), modelitem)</span>
                 </div>
             </div>
         </div>
@@ -249,7 +249,7 @@
             <div class="c-notice__inner">
                 <div class="c-notice__title">附註</div>
                 <div class="c-notice__content">
-                    @Html.Sitecore().Field(AwardFundModel.Template.AwardFund.Fields.NoteContent.ToString(), modelitem)
+                    @Html.Sitecore().Field(Template.AwardFund.Fields.NoteContent.ToString(), modelitem)
                 </div>
             </div>
         </div>
