--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
@@ -35,8 +35,8 @@
                         <option value="基金名稱低至高" data-sorting-column="ProductCode" data-sorting-class="is-asc">基金名稱低至高</option>
                         <option value="最新淨值高至低" data-sorting-column="NetAssetValue" data-sorting-class="is-desc">最新淨值高至低</option>
                         <option value="最新淨值低至高" data-sorting-column="NetAssetValue" data-sorting-class="is-asc">最新淨值低至高</option>
-                        <option value="幣別高至低" data-sorting-column="ValuationCurrency" data-sorting-class="is-desc">幣別高至低</option>
-                        <option value="幣別低至高" data-sorting-column="ValuationCurrency" data-sorting-class="is-asc">幣別低至高</option>
+                        <option value="幣別高至低" data-sorting-column="CurrencyCode" data-sorting-class="is-desc">幣別高至低</option>
+                        <option value="幣別低至高" data-sorting-column="CurrencyCode" data-sorting-class="is-asc">幣別低至高</option>
                         <option value="基金類型高至低" data-sorting-column="FundTypeNameByAPI" data-sorting-class="is-desc">基金類型高至低</option>
                         <option value="基金類型低至高" data-sorting-column="FundTypeNameByAPI" data-sorting-class="is-asc">基金類型低至高</option>
                         <option value="年度高至低" data-sorting-column="Year" data-sorting-class="is-desc">年度高至低</option>
@@ -78,7 +78,7 @@
                                     <div class="c-table__title">
                                         <span>幣別</span>
                                         <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
-                                        <a href="#" class="o-sorting" data-sorting-column="ValuationCurrency"></a>
+                                        <a href="#" class="o-sorting" data-sorting-column="CurrencyCode"></a>
                                     </div>
                                 </th>
                                 <th>
@@ -147,7 +147,7 @@
                                             <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
                                         </div>
                                         <div class="c-cardTable__content">
-                                            <a href="#" class="o-link">@item.ValuationCurrency</a>
+                                            <a href="#" class="o-link">@item.CurrencyName</a>
                                         </div>
                                     </td>
                                     <td class="c-cardTable__body" data-card-table-width="1/2">
@@ -182,7 +182,10 @@
                                         </div>
                                     </td>
                                     <td class="c-cardTable__footer" data-card-table-width="1/3">
-                                        <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+                                        @if (item.OnlineSubscriptionAvailability == "Y")
+                                        {
+                                            <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+                                        }
                                     </td>
                                 </tr>
                             }
@@ -193,124 +196,7 @@
         </div>
     </div>
 </div>
-<div class="l-sharebar">
-    <div class="l-sharebar__wrap">
-        <div class="l-sharebar__content">
-            <div class="l-flex l-flex--inline u-flex-gap-sm">
-                <div class="l-flex__item">
-                    <a href="#" class="o-statusBtn o-statusBtn--btn o-statusBtn--tool" data-after="加入常用" data-text-on="已加入" data-msg="加入常用工具|移出常用工具" data-ia="true" data-ia-tooltip="false"></a>
-                </div>
-                <div class="l-flex__item">
-                    <!-- [data-popover]: 彈跳視窗功能，值為彈跳視窗的 selector -->
-                    <a href="#" class="o-btn o-btn--primary o-btn--icon" data-popover="#popoverFundHotSelectShare02">
-                        <img src="./../themes/images/icons/white/share.svg" alt="分享">分享
-                    </a>
-                    <div id="popoverFundHotSelectShare02" class="c-popover c-popover--auto u-left">
-                        <div class="c-popover__wrap">
-                            <nav class="c-popover__main">
-                                <ul class="l-flex u-flex-col u-flex-gap-md s4">
-                                    <li class="l-flex__item">
-                                        <a href="https://www.facebook.com/sharer/sharer.php?u=" class="o-social o-social--sm o-social--fb" target="_blank" data-share>
-                                            <span class="u-hidden@mb-only">Facebook</span>
-                                        </a>
-                                    </li>
-                                    <li class="l-flex__item">
-                                        <a href="https://social-plugins.line.me/lineit/share?url=" class="o-social o-social--sm o-social--line" target="_blank" data-share>
-                                            <span class="u-hidden@mb-only">LINE</span>
-                                        </a>
-                                    </li>
-                                    <li class="l-flex__item">
-                                        <div class="l-copy" data-copy>
-                                            <div class="l-copy__action">
-                                                <a href="#" class="o-social o-social--sm o-social--copy" data-copy-action>
-                                                    <span class="u-hidden@mb-only">複製網址</span>
-                                                </a>
-                                            </div>
-                                            <div class="l-copy__msg">
-                                                <div class="o-tooltip o-tooltip--relative o-tooltip--top" data-copy-msg>
-                                                    <div class="o-tooltip__content u-nowrap">已複製</div>
-                                                    <div class="o-tooltip__arrow"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div><!-- [data-collapse="true"]: 綁定開合功能 -->
-<div class="c-notice" data-collapse="true">
-    <div class="c-notice__wrap">
-        <div class="c-notice__outer" data-collapse-content="true">
-            <div class="c-notice__inner">
-                <div class="c-notice__title">附註</div>
-                <div class="c-notice__content">
-                    @Html.Sitecore().Field(Template.AwardFund.Fields.NoteContent.ToString(), modelitem)
-                </div>
-            </div>
-        </div>
-        <div class="c-notice__actions">
-            <a href="#" class="c-notice__btn" data-collapse-button="true" data-collapse="收合" data-expand="展開"></a>
-        </div>
-    </div>
-</div>
 
-<div id="popupPurchase" class="c-modal c-modal--sm mfp-hide">
-    <div class="c-modal__wrap">
-        <header class="c-modal__header">
-            <h2 class="c-modal__title">立即申購</h2>
-        </header>
-        <div class="c-modal__content">
-            <div class="u-hidden@lt-up">
-                <div class="l-flex u-flex-col u-flex-gap-xs">
-                    <div class="l-flex__item">
-                        <span class="t-bold">選擇申購平台：</span>
-                    </div>
-                    <div class="l-flex__item">
-                        <div class="l-pickGroup">
-                            <div class="l-pickGroup__item">
-                                <label class="o-btnRadio">
-                                    <input class="o-btnRadio__input" type="radio" name="platform" checked>
-                                    <div class="o-btnRadio__text"><span>第e行動</span></div>
-                                </label>
-                            </div>
-                            <div class="l-pickGroup__item">
-                                <label class="o-btnRadio">
-                                    <input class="o-btnRadio__input" type="radio" name="platform">
-                                    <div class="o-btnRadio__text"><span>iLEO</span></div>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="c-modal__action">
-            <div class="l-action l-action--inline">
-                <div class="l-action__item">
-                    <a href="#" class="o-btn o-btn--primary o-btn--sm">單筆申購</a>
-                </div>
-                <div class="l-action__item">
-                    <a href="#" class="o-btn o-btn--primary o-btn--sm">定期定額</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="popupCurrency" class="c-modal c-modal--xs mfp-hide">
-    <div class="c-modal__wrap">
-        <header class="c-modal__header">
-            <h2 class="c-modal__title">幣別提示說明</h2>
-        </header>
-        <div class="c-modal__content">
-            <p>點擊幣別可查詢相關匯率</p>
-        </div>
-    </div>
-</div>
 
 <script>
     (function ($, window, document, undefined) {
