--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFundReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFundReturnView.cshtml
@@ -36,7 +36,7 @@
                 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
             </div>
             <div class="c-cardTable__content">
-                <a href="#" class="o-link">@item.ValuationCurrency</a>
+                <a href="#" class="o-link">@item.CurrencyName</a>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
@@ -71,7 +71,10 @@
             </div>
         </td>
         <td class="c-cardTable__footer" data-card-table-width="1/3">
-            <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+            @if (item.OnlineSubscriptionAvailability == "Y")
+            {
+                <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+            }
         </td>
     </tr>
 }
