--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -1359,11 +1359,11 @@
                 <td class="c-cardTable__footer" data-card-table-width="<%= IsOnlineSubscriptionAvailability == true ? '2/3' : '1/1' %>">
                     <div class="c-cardTable__content">
                         <ul class="l-collect l-collect--divider@lt">
-                             <li class="l-collect__item">
-                                        @Html.FocusButton(new { eh_focus_id = "<%= ProductCode %>", eh_focus_name = "<%= ProductName %>" }, string.Empty, string.Empty, InvestTypeEnum.Fund, true)
+                            <li class="l-collect__item">
+                                <%= FocusTag %>
                             </li>
                             <li class="l-collect__item">
-                                        @Html.CompareButton(new { eh_compare_id = "<%= ProductCode %>", eh_compare_name = "<%= ProductName %>" }, string.Empty, string.Empty, InvestTypeEnum.Fund, true)
+                                <%= CompareTag %>
                             </li>
                         </ul>
                     </div>
@@ -1372,7 +1372,7 @@
                 <td class="c-cardTable__footer" data-card-table-width="1/3">
                     <div class="c-cardTable__content">
                         <% if (IsOnlineSubscriptionAvailability) { %>
-                                    @Html.SubscriptionButton(new { eh_subscription_id = "<%= ProductCode %>" }, string.Empty, InvestTypeEnum.Fund, true)
+                            <%= SubscriptionTag %>
                         <% } %>
                     </div>
                 </td>
@@ -1486,11 +1486,11 @@
                 <td class="c-cardTable__footer" data-card-table-width="<%= IsOnlineSubscriptionAvailability == true ? '2/3' : '1/1' %>">
                     <div class="c-cardTable__content">
                         <ul class="l-collect l-collect--divider@lt">
-                             <li class="l-collect__item">
-                             @Html.FocusButton(new{eh_focus_id="<%= ProductCode %>",eh_focus_name="<%= ProductName %>"},string.Empty,string.Empty,InvestTypeEnum.Fund,true)
+                            <li class="l-collect__item">
+                                <%= FocusTag %>
                             </li>
                             <li class="l-collect__item">
-                            @Html.CompareButton(new{eh_compare_id="<%= ProductCode %>",eh_compare_name="<%= ProductName %>"},string.Empty,string.Empty,InvestTypeEnum.Fund,true)
+                                <%= CompareTag %>
                             </li>
                         </ul>
                     </div>
@@ -1499,7 +1499,7 @@
                 <td class="c-cardTable__footer" data-card-table-width="1/3">
                     <div class="c-cardTable__content">
                         <% if (IsOnlineSubscriptionAvailability) { %>
-                        @Html.SubscriptionButton(new{eh_subscription_id="<%= ProductCode %>"},string.Empty,InvestTypeEnum.Fund,true)
+                            <%= SubscriptionTag %>
                         <% } %>
                     </div>
                 </td>
@@ -1593,11 +1593,11 @@
                 <td class="c-cardTable__footer" data-card-table-width="<%= IsOnlineSubscriptionAvailability == true ? '2/3' : '1/1' %>">
                     <div class="c-cardTable__content">
                         <ul class="l-collect l-collect--divider@lt">
-                             <li class="l-collect__item">
-                             @Html.FocusButton(new{eh_focus_id="<%= ProductCode %>",eh_focus_name="<%= ProductName %>"},string.Empty,string.Empty,InvestTypeEnum.Fund,true)
+                            <li class="l-collect__item">
+                                <%= FocusTag %>
                             </li>
                             <li class="l-collect__item">
-                            @Html.CompareButton(new{eh_compare_id="<%= ProductCode %>",eh_compare_name="<%= ProductName %>"},string.Empty,string.Empty,InvestTypeEnum.Fund,true)
+                                <%= CompareTag %>
                             </li>
                         </ul>
                     </div>
@@ -1606,7 +1606,7 @@
                 <td class="c-cardTable__footer" data-card-table-width="1/3">
                     <div class="c-cardTable__content">
                         <% if (IsOnlineSubscriptionAvailability) { %>
-                        @Html.SubscriptionButton(new{eh_subscription_id="<%= ProductCode %>"},string.Empty,InvestTypeEnum.Fund,true)
+                            <%= SubscriptionTag %>
                         <% } %>
                     </div>
                 </td>
@@ -1690,11 +1690,11 @@
                 <td class="c-cardTable__footer" data-card-table-width="<%= IsOnlineSubscriptionAvailability == true ? '2/3' : '1/1' %>">
                     <div class="c-cardTable__content">
                         <ul class="l-collect l-collect--divider@lt">
-                             <li class="l-collect__item">
-                             @Html.FocusButton(new{eh_focus_id="<%= ProductCode %>",eh_focus_name="<%= ProductName %>"},string.Empty,string.Empty,InvestTypeEnum.Fund,true)
+                            <li class="l-collect__item">
+                                <%= FocusTag %>
                             </li>
                             <li class="l-collect__item">
-                            @Html.CompareButton(new{eh_compare_id="<%= ProductCode %>",eh_compare_name="<%= ProductName %>"},string.Empty,string.Empty,InvestTypeEnum.Fund,true)
+                                <%= CompareTag %>
                             </li>
                         </ul>
                     </div>
@@ -1703,7 +1703,7 @@
                 <td class="c-cardTable__footer" data-card-table-width="1/3">
                     <div class="c-cardTable__content">
                         <% if (IsOnlineSubscriptionAvailability) { %>
-                        @Html.SubscriptionButton(new{eh_subscription_id="<%= ProductCode %>"},string.Empty,InvestTypeEnum.Fund,true)
+                            <%= SubscriptionTag %>
                         <% } %>
                     </div>
                 </td>
