--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_ScaleHistory.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_ScaleHistory.cshtml
@@ -268,6 +268,9 @@
                         $('#scale_select').trigger('change');
 
                         Highcharts.chart('scale', {
+                            time: {
+                                useUTC: false
+                            },
                             chart: {
                                 type: 'column'
                             },
@@ -332,8 +335,10 @@
                                 split: false,
                                 useHTML: true,
                                 formatter: function () {
+                                    let date = new Date(this.point.x);
+                                    let formattedDate = date.getFullYear() + '/' + ('0' + (date.getMonth() + 1)).slice(-2) + '/' + ('0' + date.getDate()).slice(-2);
                                     const tooltip = '<div style="font-size: 14px">' + '<div style="margin-bottom: 8px; color: #9C9C9C">'
-                                        + Highcharts.dateFormat('%Y/%m/%d', this.point.x) + '</div>' + this.point.y + '百萬元' + '</div>';
+                                        + formattedDate + '</div>' + this.point.y + '百萬元' + '</div>';
                                     return tooltip;
                                 },
                                 shadow: {
