--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -226,7 +226,45 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            
+                                            <div class="l-flex__item">
+                                                <div class="c-filterForm" data-filter-group>
+                                                    <div class="c-filterForm__title" data-filter-title>
+                                                        <span>參考殖利率</span>
+                                                    </div>
+                                                    <div class="c-filterForm__value">
+                                                        <div class="c-sliderBar">
+                                                            <div class="c-sliderBar__main" data-slider-bar="yieldRateYTM"></div>
+                                                            <input type="text" class="c-sliderBar__value" data-slider-val="yieldRateYTM" data-slider-suffix="%" data-filter-bar>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="l-flex__item">
+                                                <div class="c-filterForm" data-filter-group>
+                                                    <div class="c-filterForm__title" data-filter-title>
+                                                        <span>票面利率</span>
+                                                    </div>
+                                                    <div class="c-filterForm__value">
+                                                        <div class="c-sliderBar">
+                                                            <div class="c-sliderBar__main" data-slider-bar="interestRate"></div>
+                                                            <input type="text" class="c-sliderBar__value" data-slider-val="interestRate" data-slider-suffix="百萬" data-filter-bar>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="l-flex__item">
+                                                <div class="c-filterForm" data-filter-group>
+                                                    <div class="c-filterForm__title" data-filter-title>
+                                                        <span>最低交易單位</span>
+                                                    </div>
+                                                    <div class="c-filterForm__value">
+                                                        <div class="c-sliderBar">
+                                                            <div class="c-sliderBar__main" data-slider-bar="minIncrementAmount"></div>
+                                                            <input type="text" class="c-sliderBar__value" data-slider-val="minIncrementAmount" data-slider-suffix="百萬" data-filter-bar>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
 
                                             <div class="l-flex__item">
                                                 <div class="c-filterForm" id="uid-criteria-issuer" data-filter-group>
@@ -589,6 +627,9 @@
                     { field: 'Issuer', ele: '#uid-criteria-issuer :checkbox' },
                     { field: 'Issuer', ele: '#uid-criteria-issuer :checkbox', all: 'all', selector: ':not(:checked)' },
                     { field: 'MaturityYear', ele: '[data-slider-val="maturityYear"]', type: 'range', delimiter: ',' },
+                    { field: 'YieldRateYTM', ele: '[data-slider-val="yieldRateYTM"]', type: 'range', delimiter: ',' },
+                    { field: 'InterestRate', ele: '[data-slider-val="interestRate"]', type: 'range', delimiter: ',' },
+                    { field: 'MinIncrementAmountNumber', ele: '[data-slider-val="minIncrementAmount"]', type: 'range', delimiter: ',' },
                 ],
                 callbacks: {
                     onFilterSelect: function (obj) {
@@ -911,7 +952,68 @@
                     }
                 });
 
+                $('[data-slider-bar="yieldRateYTM"]').sliderBar({
+                    start: [-5, 1000],
+                    connect: true,
+                    range: {
+                        'min': [-5, 5],
+                        '20%': [0, 3],
+                        '40%': [3, 2],
+                        '60%': [5, 2],
+                        '80%': [7, 993],
+                        'max': 1000
+                    },
+                    pips: {
+                        mode: 'positions',
+                        values: [0, 20, 40, 60, 80, 100],
+                        density: -1,
+                        format: wNumb({
+                            suffix: '%'
+                        })
+                    }
+                });
+
+                $('[data-slider-bar="interestRate"]').sliderBar({
+                    start: [-5, 1000],
+                    connect: true,
+                    range: {
+                        'min': [-5, 5],
+                        '20%': [0, 3],
+                        '40%': [3, 2],
+                        '60%': [5, 2],
+                        '80%': [7, 993],
+                        'max': 1000
+                    },
+                    pips: {
+                        mode: 'positions',
+                       values: [0, 20, 40, 60, 80, 100],
+                        density: -1,
+                        format: wNumb({
+                            suffix: '%'
+                        })
+                    }
+                });
                 
+                $('[data-slider-bar="minIncrementAmount"]').sliderBar({
+                    start: [-5, 100000],
+                    connect: true,
+                    range: {
+                        'min': [-5, 5],
+                        '20%': [0, 0.2],
+                        '40%': [0.2, 0.8],
+                        '60%': [1, 19],
+                        '80%': [20, 9980],
+                        'max': 10000
+                    },
+                    pips: {
+                        mode: 'positions',
+                             values: [0, 20, 40, 60, 80, 100],
+                        density: -1,
+                        format: wNumb({
+                            suffix: '萬'
+                        })
+                    }
+                });
             }
 
             initBind();
