--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -947,7 +947,7 @@
                         values: [0, 20, 40, 60, 80, 100],
                         density: -1,
                         format: wNumb({
-                            suffix: '百萬'
+                            suffix: '年'
                         })
                     }
                 });
