--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -31,6 +31,8 @@
                 return;
             }
 
+            window.loading = () => 0; // 覆蓋 loading
+
             function loading() {
                 // 開啟loading方式:
                 window.loading('show');
@@ -39,6 +41,14 @@
                     // 關閉loading方式:
                     window.loading('hide');
                 }, 300);
+            }
+
+            function showLoading() {
+                $('.c-loading').loading('show');
+            }
+
+            function hideLoading() {
+                $('.c-loading').loading('hide');
             }
 
             $.fn.extend({
@@ -362,7 +372,7 @@
                             $(`[data-filter-empty=${isEmpty}]`).show();
                             $(`[data-filter-empty=${!isEmpty}]`).hide();
 
-                            window.loading('hide');
+                            hideLoading();
                         },
                         afterPagination: function () {
                             $('[data-popup]').magnificPopup();
@@ -585,7 +595,9 @@
                         $('[data-filter-switch="#uid-template-marketPrice-original"]').trigger('change');
                     }).catch((error) => {
                         console.log(error);
+                        hideLoading();
                     }).then(() => {
+                        window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
                         checkKeywordQueryString();
                     });
                 },
@@ -624,7 +636,7 @@
             $('#table').on('click.sorting', '.o-sorting', function (e) {
                 e.preventDefault();
                 // 呼叫 loading
-                window.loading('show');
+                showLoading();
                 var $this = $(this);
                 var orderby = '';
                 if ($this.hasClass('is-asc')) {
@@ -651,7 +663,7 @@
                 // 因展示，使用 setTimeout 延遲關閉 loading
                 setTimeout(() => {
                     // 關閉loading
-                    window.loading('hide');
+                    hideLoading();
                 }, 300);
             });
 
