--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
@@ -111,6 +111,8 @@
             <section class="l-flex u-flex-col u-flex-gap-sm">
                 <div class="l-flex__item">
 
+                        </div>
+                    </div>
                 </div>
                 <div class="l-flex__item"></div>
             </section>
@@ -119,10 +121,10 @@
             <section class="l-flex u-flex-col u-flex-gap-sm">
                 <div class="l-flex__item">
 
-                </div>
+                        </div>
                 <div class="l-flex__item"></div>
             </section>
-        </div>
+                    </div>
         <div class="c-tab__panel" data-tab-panel-id="tab-3">
             <section class="l-flex u-flex-col u-flex-gap-sm">
                 <div class="l-flex__item">
@@ -134,10 +136,16 @@
         <div class="c-tab__panel" data-tab-panel-id="tab-4">
             <section class="l-flex u-flex-col u-flex-gap-sm">
                 <div class="l-flex__item">
-                </div>
+                    <div class="l-selectbox">
+                        <div class="l-selectbox__item">
+                            <select class="o-selectbox o-selectbox--full o-selectbox--form" data-width="100%" data-selection-css-class="select2-selection--form" data-selectbox="true" data-select-name="tab-3">
+                                <option value="4008">技術分析</option>
+                                <option value="4010">收盤走勢圖</option>
+                            </select>
+                        </div>
                 <div class="l-flex__item"></div>
             </section>
-        </div>
+                    </div>
         <div class="c-tab__panel" data-tab-panel-id="tab-5">
             <section class="l-flex u-flex-col u-flex-gap-sm">
                 <div class="l-flex__item">
@@ -287,6 +295,12 @@
 
             return val;
         }
+
+        $('select').on('change', function () {
+            var val = this.value;
+
+            setIframeSrc(val);
+        });
 
         $('[data-tab-target]').on('click', function () {
             var name = DOMPurify.sanitize($(this).attr("data-tab-target"));
